# mailmasquerade

./: .gitignore  MailMasquerade.hs  Main.hs  MainSpec.hs  mailmasquerade.cabal
openrc/: mailmasquerade
