cabal-version:      2.2
name:               mailmasquerade
version:            0
synopsis:           proxies e-mail to a configurable address
category:           Network
license:            MIT
author:             Sergey Alirzaev
maintainer:         zl29ah@gmail.com
build-type:         Simple
tested-with:        GHC == 9.6.4

Source-repository head
  type:              git
  location:          https://github.com/l29ah/mailmasquerade.git

common stuff
    ghc-options: -W -Wcompat -fno-warn-tabs
    build-depends:      base >= 4 && < 5
                      , HaskellNet ^>= 0.6.1.2
                      , HaskellNet-SSL ^>= 0.3.4.4
                      , text >= 1.2.4.1 && < 2.1
                      , parsec ^>= 3.1.16.1
                      , hsemail ^>= 2.2.1
                      , bytestring >= 0.10.12.1 && < 0.12
                      , string-class ^>= 0.1.7.1
                      , containers ^>= 0.6.7
                      , binary ^>= 0.8.8.0
                      , directory ^>= 1.3.8.1
                      , aeson ^>= 2.1.2.1
                      , hslogger ^>= 1.3.1.0
                      , purebred-email ^>= 0.6.0.2
    default-language:   Haskell2010

executable mailmasquerade
    import:             stuff
    main-is:            Main.hs
    other-modules: MailMasquerade

test-suite spec
    import: stuff
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends: hspec == 2.*
    other-modules: MainSpec
                 , MailMasquerade
